# centralagent-brain

./: .gitignore  pyproject.toml
.auto-claude/specs/001-implement-initial-version/: build-progress.txt  implementation_plan.json
config/: settings.py
src/: __init__.py  __main__.py  cli.py  dedup.py  models.py  normalizer.py  pipeline.py
src/parsers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  factory_droid.py  pi.py
src/writers/: __init__.py  base.py  extract_writer.py  session_writer.py
tests/: __init__.py  conftest.py  test_dedup.py  test_normalizer.py  test_pipeline.py  test_writers.py
tests/fixtures/: claude_code_session.jsonl  codex_session.jsonl  create_cursor_fixture.py  factory_droid_session.jsonl  factory_droid_settings.json  pi_manual_import.json
tests/test_parsers/: __init__.py  test_claude_code.py  test_codex.py  test_cursor.py  test_factory_droid.py  test_pi.py
